--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "SET ENV=test&& tsc && jasmine-ts",
-    "migrate": "db-migrate up && SET ENV=test&& db-migrate --env test up",
-    "test:rs": "set ENV=test&& db-migrate --env test reset",
+    "migrate:up": "db-migrate up && db-migrate --env test up",
+    "migrate:rs": "db-migrate reset && db-migrate --env test reset",
+    "migrate:dwn": "db-migrate up && db-migrate --env test up",
     "dev": "nodemon src/index.ts",
     "build": "rm -rf dist && tsc",
     "start": "db-migrate && node dist/index.js",
@@ -27,8 +28,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
-    "typescript": "^4.7.4",
-    "yarn": "^1.22.19"
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
